grammars/ocaml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure)
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item)
        )),
        repeat(';;')
      )
    ),

    _signature: $ => choice(
      repeat1(';;'),
      seq(repeat1(seq(repeat(';;'), $._signature_item)), repeat(';;'))
    ),

    // Toplevel

    value_definition: $ => seq(
      choice(seq('let', optional($._attribute), optional('rec')), $.let_operator),
      sep1(choice('and', $.let_and_operator), $.let_binding)
    ),

    let_binding: $ => prec.right(seq(
      choice(
        // A pattern. Examples:
        //    let x
        //    let (x @ local)
        //    let (x, y)
        // We cannot allow exception patterns here because that would create a
        // conflict: when encountering [let exception], the parser wouldn't be
        // able to determine whether the code is a [$.let_exception_expression]
        // or an [$.exception_pattern] inside a [$.let_binding].
        field('pattern', $._pattern_no_exception),
        // Legacy modes followed by an identifier or a parenthesized operator.
        // Examples:
        //    let local_ x
        //    let local_ ( + )
        seq(
          $._mode_expr_legacy,
          field('pattern', $._value_name)
        ),
      ),
      optional(choice(
        $.at_mode_expr,
        seq(
          repeat($._parameter),
          optional(choice(
            $._maybe_polymorphic_typed_with_optional_modes,
            $.at_mode_expr
          )),
          optional($._coerced),
          '=',
          field('body', $._sequence_expression)
        )
      )),
      repeat($.item_attribute)
    )),

    _parameter: $ => choice(
      $.parameter,
      alias(
        $._parenthesized_abstract_types_with_optional_jkind_annotations,
        $.abstract_types
      )
    ),

    parameter: $ => choice(
      // A positional parameter. Examples:
      //    x
      //    (x : t)
      //    (x : 'a. 'a)
      field('pattern', $._simple_maybe_polymorphic_pattern_with_optional_modes),
      // A labeled or optional parameter with no additional information.
      // Examples:
      //    ~x
      //    ?x
      seq(
        choice('~', '?'),
        field('pattern', $._simple_value_pattern)
      ),
      // A labeled or optional parameter inside parentheses, optionally with a
      // default value. Examples:
      //    ~(x : t)
      //    ?(x : 'a. 'a)
      //    ?(x : t = y)
      // TODO: Currently, this rule allows default values on labeled
      // parameters, e.g. [~(x = y)], but Flambda doesn't allow this syntax. We
      // should fix this inconsistency.
      seq(
        choice('~', '?'),
        '(',
        optional($._mode_expr_legacy),
        field('pattern', $._simple_value_pattern),
        optional(choice(
          $._maybe_polymorphic_typed_with_optional_modes,
          $.at_mode_expr
        )),
        optional(seq('=', $._sequence_expression)),
        ')'
      ),
      // A labeled or optional parameter with an alias. Examples:
      //    ~x:y
      //    ~x:(y : t)
      //    ?x:(y : 'a. 'a)
      seq(
        $._label,
        token.immediate(':'),
        field(
          'pattern',
          $._simple_maybe_polymorphic_pattern_with_optional_modes
        )
      ),
      // A labeled or optional parameter with an alias and a default value.
      // Examples:
      //    ?x:(y = z)
      //    ?x:(y : t = z)
      //    ?x:(y : 'a. 'a = z)
      // TODO: Currently, this rule allows default values on labeled
      // parameters, e.g. [~x:(y = z)] but Flambda doesn't allow this syntax. We
      // should fix this inconsistency.
      seq(
        $._label,
        token.immediate(':'),
        '(',
        optional($._mode_expr_legacy),
        field('pattern', $._pattern),
        optional(choice(
          $._maybe_polymorphic_typed_with_optional_modes,
          $.at_mode_expr
        )),
        seq('=', $._sequence_expression),
        ')'
      )
    ),

    _type_params: $ => choice(
      $._type_param,
      parenthesize(sep1(',', seq(
        $._type_param,
        optional($._jkind_annotation)
      )))
    ),

    _type_equation: $ => seq(
      choice(
        seq('=', optional('private')),
        ':='
      ),
      $._type
    ),

    module_definition: $ => seq(
      'module', optional($._attribute), optional('rec'),
      sep1('and', $.module_binding)
    ),

    module_binding: $ => seq(
      field('name', choice($._module_name, alias('_', $.module_name))),
      repeat($.module_parameter),
      optional($._module_typed),
      optional(seq(choice('=', ':='), field('body', $._module_expression))),
      repeat($.item_attribute)
    ),

    module_parameter: $ => parenthesize(optional(seq(
      field('name', choice($._module_name, alias('_', $.module_name))),
      $._module_typed
    ))),

    module_type_definition: $ => seq(
      'module', 'type',
      optional($._attribute),
      field('name', $._module_type_name),
      optional(seq(choice('=', ':='), field('body', $._module_type))),
      repeat($.item_attribute)
    ),

    include_module: $ => seq(
      $._include_maybe_functor,
      optional($._attribute),
      $._module_expression,
      repeat($.item_attribute)
    ),

    _include_maybe_functor: $ => choice(
      'include',
      // Give precedence to "include functor" over "include"
      prec(1, seq('include', 'functor'))
    ),

    value_specification: $ => seq(
      'val',
      optional($._attribute),
      $._value_name,
      $._maybe_polymorphic_typed_with_optional_modes,
      repeat($.item_attribute)
    ),

    include_module_type: $ => seq(
      $._include_maybe_functor,
      optional($._attribute),
      $._module_type,
      repeat($.item_attribute)
    ),

    // Module types

    _module_typed: $ => seq(':', $._module_type),

    _simple_module_type: $ => choice(
      $.module_type_path,
      $.signature,
      $.parenthesized_module_type
    ),

    _module_type: $ => choice(
      $._simple_module_type,
      $.module_type_constraint,
      $.module_type_of,
      $.functor_type,
      $._extension
    ),

    signature: $ => seq(
      'sig',
      optional($._signature),
      'end'
    ),

    module_type_constraint: $ => prec.right(seq(
      $._module_type,
      'with',
      sep1('and', choice(
        $.constrain_type,
        $.constrain_module,
        $.constrain_module_type,
        $.extended_module_path
      ))
    )),

    constrain_type: $ => seq(
      'type',
      optional($._type_params),
      $.type_constructor_path,
      $._type_equation,
      repeat($.type_constraint)
    ),

    constrain_module: $ => seq(
      'module',
      $.module_path,
      choice('=', ':='),
      $.extended_module_path
    ),

    constrain_module_type: $ => prec.left(seq(
      'module', 'type',
      $.module_type_path,
      choice('=', ':='),
      $._module_type
    )),

    module_type_of: $ => seq(
      'module', 'type', 'of',
      $._module_expression
    ),

    functor_type: $ => prec.right(seq(
      choice(
        seq('functor', repeat($.module_parameter)),
        $._simple_module_type,
        seq('(', ')')
      ),
      '->',
      $._module_type
    )),

    parenthesized_module_type: $ => seq(
      parenthesize($._module_type)
    ),

    // Module expressions

    _simple_module_expression: $ => choice(
      $.typed_module_expression,
      $.parenthesized_module_expression,
      $.packed_module,
      $._extension
    ),

    _module_expression: $ => choice(
      $._simple_module_expression,
      $.module_path,
      $.structure,
      $.functor,
      $.module_application
    ),

    structure: $ => seq(
      'struct',
      optional($._structure),
      'end'
    ),

    functor: $ => prec.right(seq(
      'functor',
      repeat1($.module_parameter),
      '->',
      field('body', $._module_expression),
    )),

    module_application: $ => seq(
      field('functor', $._module_expression),
      choice(
        field('argument', $._simple_module_expression),
        seq('(', ')')
      )
    ),

    typed_module_expression: $ => parenthesize(seq(
      $._module_expression,
      $._module_typed
    )),

    packed_module: $ => parenthesize(seq(
      'val',
      $._expression,
      optional($._module_typed),
      optional(seq(':>', $._module_type))
    )),

    parenthesized_module_expression: $ => parenthesize($._module_expression),

    // Class types

    _maybe_polymorphic_typed_with_optional_modes: $ => choice(
      $._typed_with_optional_modes,
      $._polymorphic_typed_with_optional_modes
    ),

    polymorphic_type: $ => seq(
      choice(
        // Type variables with optional layout annotations. Example:
        //    'a ('b : value)
        repeat1($._type_variable_with_optional_jkind_annotation),
        // Types introduced with the [type] keyword, with optional layout
        // annotations. Example:
        //    type a (b : value)
        alias(
          $._abstract_types_with_optional_jkind_annotations,
          $.abstract_types
        )
      ),
      '.',
      $._type
    ),

    _coerced: $ => seq(':>', $._type),

    // One or more abstract types. Does not allow layout annotations. Example:
    //    type t s
    _abstract_types_with_optional_jkind_annotations: $ => seq(
      'type',
      repeat1(choice(
        $._type_constructor,
        parenthesize(seq(
          $._type_constructor,
          $._jkind_annotation
        ))
      ))
    ),

    // A single abstract type with a layout annotation. Since there is only one
    // type, we don't need parentheses, i.e. we allow [type t : any] instead of
    // [type (t : any)].
    _type_variable_with_optional_jkind_annotation: $ => choice(
      $.type_variable,
      $.type_variable_with_jkind_annotation
    ),
    _type: $ => choice(
      $._tuple_type,
      $.function_type,
      $.aliased_type
    ),

    constructed_type: $ => prec(PREC.app, seq(
      $._constructed_type_arguments,
      choice(
        $.type_constructor_path,
        $.unboxed_type_constructor_path
      )
    )),

    _constructed_type_arguments: $ => choice(
      $._simple_type,
      parenthesize(sep2(',', choice(
        // Any type. This includes parenthesized type variables/wildcards with
        // layout annotations. Examples:
        //    t
        //    'a
        //    _
        //    ('a : value)
        //    (_ : value)
        $._type,
        // A type variable with a layout annotation. Example:
        //    'a : value
        seq(
          $.type_variable,
          $._jkind_annotation
        ),
        // A type wildcard with a layout annotation. Example:
        //    _ : value
        seq(
          $._type_wildcard,
          $._jkind_annotation
        )
      )))
    ),

    _expression: $ => choice(
      $._simple_expression,
      $.product_expression,
      $.cons_expression,
      $.application_expression,
      $.infix_expression,
      $.sign_expression,
      $.set_expression,
      $.if_expression,
      $.while_expression,
      $.for_expression,
      $.match_expression,
      $.function_expression,
      $.fun_expression,
      $.try_expression,
      $.let_expression,
      $.assert_expression,
      $.lazy_expression,
      $.let_module_expression,
      $.let_open_expression,
      $.let_exception_expression,
      $.mode_legacy_expression,
      $.exclave_legacy_expression
    ),

    _sequence_expression: $ => choice(
      $._expression,
      $.sequence_expression
    ),

    product_expression: $ => prec.left(PREC.prod, seq(
      field('left', $._product_element),
      ',',
      field('right', $._product_element)
    )),

    _product_element: $ => prec(PREC.prod, choice(
      $._expression,
      seq(
        '~',
        $._label_name,
        optional(seq(
          token.immediate(':'),
          $._simple_expression
        ))
      ),
      seq(
        '~',
        '(',
        $._label_name,
        $._typed,
        ')'
      )
    )),

    _pattern_no_exception: $ => choice(
      $._simple_pattern,
      $.alias_pattern,
      $.or_pattern,
      $.constructor_pattern,
      $.tag_pattern,
      $.tuple_pattern,
      $.cons_pattern,
      $.range_pattern,
      $.lazy_pattern
    ),

    _pattern: $ => choice(
      $._pattern_no_exception,
      $.exception_pattern
    ),

    _simple_maybe_polymorphic_pattern_with_optional_modes: $ => choice(
      $._simple_pattern,
      $.polymorphic_typed_pattern
    ),

    tuple_pattern: $ => prec.left(PREC.prod, seq(
      $._tuple_pattern_element,
      ',',
      choice(
        $._tuple_pattern_element,
        '..'
      )
    )),

    _tuple_pattern_element: $ => prec(PREC.prod, choice(
      $._pattern,
      seq(
        '~',
        $._label_name,
        optional(seq(
          token.immediate(':'),
          $._simple_pattern
        ))
      ),
      seq(
        '~',
        '(',
        $._label_name,
        $._typed,
        ')'
      )
    )),

    parenthesized_pattern: $ => parenthesize($._pattern),

    attribute: $ => seq(
      alias(/\[@/, '[@'),
      $.attribute_id,
      optional($.attribute_payload),
      ']'
    ),

    item_attribute: $ => seq(
      '[@@',
      $.attribute_id,
      optional($.attribute_payload),
      ']'
    ),

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    _infix_operator: $ => choice(
      $.pow_operator,
      $.mult_operator,
      $.add_operator,
      $.concat_operator,
      $.rel_operator,
      $.and_operator,
      $.or_operator,
      $.assign_operator
    ),

    add_operator: $ => choice(
      /[+-]/, /[+-]\./,
      token(choice(
        seq('+', repeat1(OP_CHAR)),
        seq('-', choice(repeat1(/[!$%&*+\-./:<=?@^|~]/), repeat2(OP_CHAR)))
      ))
    ),

    let_operator: $ => token(
      seq('let', /[$&*+\-/<=>@^|]/, repeat(OP_CHAR))
    ),

    let_and_operator: $ => token(
      seq('and', /[$&*+\-/<=>@^|]/, repeat(OP_CHAR))
    ),

    _value_name: $ => choice(
      alias($._identifier, $.value_name),
      $.parenthesized_operator
    ),

    _simple_value_pattern: $ => alias($._identifier, $.value_pattern),

    parenthesized_operator: $ => parenthesize(choice(
      $.prefix_operator,
      $._infix_operator,
      $.hash_operator,
      seq(
        '.',
        $.indexing_operator,
        choice(
          seq('(', optional(seq(';', '..')), ')'),
          seq('[', optional(seq(';', '..')), ']'),
          seq('{', optional(seq(';', '..')), '}')
        ),
        optional('<-')
      ),
      $.let_operator,
      $.let_and_operator,
      $.match_operator
    )),

    // Modes

    _mode_expr_legacy: $ => repeat1($.mode_legacy),

    value_path: $ => path($.module_path, $._value_name),

    module_path: $ => prec(1, path($.module_path, $._module_name)),

    extended_module_path: $ => choice(
      path($.extended_module_path, $._module_name),
      seq(
        $.extended_module_path,
        parenthesize($.extended_module_path)
      )
    ),

    module_type_path: $ => path($.extended_module_path, $._module_type_name),

    type_constructor_path: $ => choice(
      path($.extended_module_path, $._type_constructor),
      // For some reason, we have to explicitly add the below option, even
      // though it can be matched by the above option. If we don't include this
      // option, Tree-sitter won't be able to parse [type t = (_, t) t].
      //
      // TODO: Continue searching for a better solution.
      '_'
    ),

    _type_constructor: $ => alias($._identifier, $.type_constructor),
    _module_name: $ => alias($._capitalized_identifier, $.module_name),
